<resources>
    <string name="app_name">NYTimes</string>
    <string name="send_message">SEND MESSAGE</string>
    <string name="enter_message">Enter a message…</string>
    <string name="summary">Member of nanoSoft company. Currently look for new experience in Android development </string>
    <string name="title1">BMSTU</string>
    <string name="title2">CAD Software Ingineer, nanoCAD team</string>
    <string name="title3">Badminton player</string>

    <string name="warning_string_length">Please enter string!</string>
    <string name="warning_no_mail_app">There is no app for SENDTO action!</string>
    <string name="warning_no_browser_app">There is no app for ACTION_VIEW action!</string>
    <string name="btn_email_text">email</string>
    <string name="copyright">© 2018 Ermolaenko Alexandr</string>
    <string name="menu_about">About</string>
    <string name="menu_prefs">Preferences</string>

    <string name="desc_avatar">Profile foto</string>
    <string name="desc_vk">VKontakte</string>
    <string name="desc_fb">Facebook</string>
    <string name="desc_twitter">Twitter</string>

    <string name="unknown_error">Something went wrong!</string>
    <string name="error_data_is_empty">There is no data for your request</string>
    <string name="error_network">Network error. Please check your network connection and try again</string>
    <string name="error_request">Request execution error</string>
    <string name="error_get_from_db">Cannot get news from database</string>
    <string name="error_delete_in_db">Cannot delete news in database</string>
    <string name="error_save_in_db">Cannot save news in database</string>

    <string name="section_home">Home</string>
    <string name="section_opinion">Opinion</string>
    <string name="section_world">World</string>
    <string name="section_national">National</string>
    <string name="section_politics">Politics</string>
    <string name="section_upshot">Upshot</string>
    <string name="section_nyregion">NYregion</string>
    <string name="section_business">Business</string>
    <string name="section_technology">Technology</string>
    <string name="section_science">Science</string>
    <string name="section_health">Health</string>
    <string name="section_sports">Sports</string>
    <string name="section_arts">Arts</string>
    <string name="section_books">Books</string>
    <string name="section_movies">Movies</string>
    <string name="section_theater">Theater</string>
    <string name="section_sundayreview">Sunday review</string>
    <string name="section_fashion">Fashion</string>
    <string name="section_tmagazine">Style Magazine</string>
    <string name="section_food">Food</string>
    <string name="section_travel">Travel</string>
    <string name="section_magazine">Magazine</string>
    <string name="section_realestate">Realestate</string>
    <string name="section_automobiles">Automobiles</string>
    <string name="section_obituaries">Obituaries</string>
    <string name="section_insider">Insider</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>

    <string name="title_edit_news">Edit news</string>
    <string name="label_title"><u>Title:</u></string>
    <string name="label_image_url"><u>Image URL:</u></string>
    <string name="label_news_url"><u>News URL:</u></string>
    <string name="label_preview_text"><u>Preview text:</u></string>
    <string name="menu_apply">Apply</string>
    <string name="text_welcome">Welcome!</string>
    <string name="btn_skip">Skip</string>
    <string name="label_see_more">See more on NYTimes.com</string>

    <string name="service_notification_text">News updating…</string>
    <string name="service_notification_title">NY Times</string>
    <string name="service_notification_channel_desc">Background update</string>
    <string name="service_action_cancel">Cancel</string>
    <string name="service_result_success">Successful update</string>
    <string name="service_result_fail">An error occurred during the update</string>
    <string name="pref_key_edit_news">edit_news</string>
    <string name="pref_key_delete_news">delete_news</string>
    <string name="title_deleting_news">Deleting news</string>
    <string name="dialog_title_deleting_news">Enable deleting news ability?</string>
    <string name="title_editing_news">Editing news</string>
    <string name="dialog_title_editing_news">Enable editing news ability?</string>
    <string name="title_donald_trump_mode">Donald Trump mode(STOP FAKE NEWS)</string>
</resources>
