<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        tools:context=".ui.about.AboutActivity">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_image"
            android:adjustViewBounds="true"
            android:contentDescription="@string/desc_avatar"
            android:scaleType="centerCrop"
            android:src="@drawable/profile" />

        <LinearLayout
            android:id="@+id/main_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="@dimen/spacing_standard">

            <TextView
                style="@style/TextTitleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/study"
                android:text="@string/title1" />

            <TextView
                style="@style/TextTitleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/account_box"
                android:text="@string/title2" />

            <TextView
                style="@style/TextTitleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/badminton"
                android:text="@string/title3" />

            <include layout="@layout/divider" />

            <TextView
                style="@style/StandardTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/summary" />

            <include layout="@layout/divider" />

            <EditText
                android:id="@+id/et_message"
                style="@style/StandardTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_message"
                android:inputType="text" />

            <TextView
                android:id="@+id/btn_next"
                style="@style/StandardButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/send_message"
                android:textColor="@android:color/holo_red_dark" />

        </LinearLayout>

        <LinearLayout
            style="@style/StandardViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/icon_twitter"
                style="@style/IconContactStyle"
                android:contentDescription="@string/desc_twitter"
                android:src="@drawable/twitter" />

            <ImageView
                android:id="@+id/icon_fb"
                style="@style/IconContactStyle"
                android:contentDescription="@string/desc_fb"
                android:src="@drawable/fb" />

            <ImageView
                android:id="@+id/icon_vk"
                style="@style/IconContactStyle"
                android:contentDescription="@string/desc_vk"
                android:src="@drawable/vk" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>