<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.newsdetails.NewsDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="@dimen/spacing_standard">

        <TextView
            style="@style/EditDetails.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/et_title"
            android:text="@string/label_title" />

        <EditText
            android:id="@+id/et_title"
            style="@style/EditDetails.Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            tools:text="Tourist filmed sitting on 5m-long crocodile" />

        <TextView
            style="@style/EditDetails.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/et_preview_text"
            android:text="@string/label_preview_text" />

        <EditText
            android:id="@+id/et_preview_text"
            style="@style/EditDetails.Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            tools:text="Tourist filmed sitting on 5m-long crocodile" />

        <TextView
            style="@style/EditDetails.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/et_news_url"
            android:text="@string/label_news_url" />

        <EditText
            android:id="@+id/et_news_url"
            style="@style/EditDetails.Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine|textUri"
            tools:text="www.nytimes.com" />

        <TextView
            style="@style/EditDetails.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/et_image_url"
            android:text="@string/label_image_url" />

        <EditText
            android:id="@+id/et_image_url"
            style="@style/EditDetails.Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine|textUri"
            tools:text="www.nytimes.com" />
    </LinearLayout>

</ScrollView>
